# safe_struct

./: CMakeLists.txt  fake_boost.h  safe_struct_base.h  safe_struct_reader.cc  safe_struct_writer.cc
sbeXml/: safe_struct.xml
